--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,19 @@
 			<version>2.2</version>
 		</dependency>
 	</dependencies>
+	<distributionManagement>
+
+	    <repository>
+	      <id>nexus</id>
+	      <name>Idexcel Technologies Releases Nexus Repository</name>
+	      <url>http://3.108.41.91:8081/repository/hemanth-release/</url>
+	    </repository>
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Idexcel Technologies Snapshot Nexus Repository </name>
+	      <url>http://3.108.41.91:8081/repository/hemanth-snapshot/</url>
+	    </snapshotRepository>
+       </distributionManagement> 
 	<build>
 		<finalName>jpetstore</finalName>
 		<plugins>
